# blocksizemodel

./: README.md  Untitled.ipynb  classify.md  knn.ipynb  notes.md  plot_hmm_compute2d_em_expectmu.ipynb  plot_hmm_compute2d_em_expectsigma.ipynb  plot_hmm_mem2d_em_gammaobs.ipynb  plot_hmm_mem2d_em_update_expectsigma.ipynb  plot_mcx_compute1d.ipynb  prep.py  readme.md  util_tsne.py  warp.py  warp.py_v1  warp_classify_template.ipynb
BlackScholes/: bs128.csv  bs16.csv  bs32.csv  bs64.csv  gentrace.sh  metrics64.csv  process.ipynb  results.csv
FDTD3d/: FDTD3d.sm52.sass  FDTD3d.sm52.sass.result  FiniteDifferencesKernel.sm_52.sass  Makefile  kernelStat_FiniteDifferencesKernel.csv  metrics.csv  trace.csv  warp_classify.ipynb
HSOpticalFlow/: 2_kernelsassDump.sh  HSOpticalFlow  Makefile  metrics.csv  trace.csv
SobolQRNG/: Makefile  SobolQRNG.sm52.sass  kernelStat_sobolGPU_kernel.csv  metrics.csv  sobolGPU_kernel.sm_52.sass  sobolGPU_kernel.sm_52.sass.result  trace.csv  (+1 more)
hmm/: hmmsr  (+16 more)
matMul/: CMakeLists.txt  bs1024.csv  bs16.csv  bs256.csv  bs64.csv  gentrace.sh  kernelStat_matrixMulCUDA.csv  matrixMulCUDA.sm_52.sass  matrixMulCUDA.sm_52.sass.result  metrics.csv  metrics1024.csv  metrics16.csv  metrics256.csv  metrics64.csv  mm16.cu  mm16.sm52.sass.result  mm32.cu  mm4.cu  mm4.sm52.sass  mm4.sm52.sass.result  mm8.cu  mm8.sm52.sass  process.ipynb  results.csv  sassGen  test_mm8.csv  test_mm8.ipynb  trace.csv  trace1024.csv  trace16.csv  trace256.csv  trace64.csv  warp_classify.ipynb
vector_add/: 01_classify_warp.ipynb  CMakeCache.txt  CMakeLists.txt  Makefile  bs1024.csv  bs1024trace.csv  bs128.csv  bs128trace.csv  bs256.csv  bs256trace.csv  bs32.csv  bs32trace.csv  bs512.csv  bs512trace.csv  bs64.csv  bs64trace.csv  cmake_install.cmake  gentrace.sh  kernelStat_vectorAdd.csv  kernel_stat_bs64.csv  metrics.csv  metrics1024.csv  metrics128.csv  metrics256.csv  metrics32.csv  metrics512.csv  metrics64.csv  process.ipynb  results.csv  test1.csv  test_bs64.ipynb  trace.csv  trace1024.csv  trace128.csv  trace256.csv  trace32.csv  trace512.csv  trace64.csv  vectorAdd.sm_52.sass  vectorAdd.sm_52.sass.result  (+14 more)
(+465 files in other folders)
